todo--TCC运行 AdminApplication 时出错。命令行过长。